--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9090
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/beavildatas
+    url: jdbc:mysql://localhost:3306/beavildatas?useUnicode=true&amp&characterEncoding=utf-8
     username: root
     password: 27963608
     driver-class-name: com.mysql.jdbc.Driver
