图片路径修改

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,4 @@ spring:
     mode: LEGACYHTML5
     encoding: UTF-8
     content-type: text/html
+imagePath: file:/Users/macpro/IdeaProjects/bvson/images/
